baml_language/crates/baml_tests/snapshots/diagnostic_errors/test_with_runner_ambiguity/baml_tests__diagnostic_errors__test_with_runner_ambiguity__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR ===
class user.MyRunner {
  threshold: float
}
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test_at("root", "simple runner", () -> null { {  } assert.is_true(true) }, my_runner); registry.register_test_at("root", "call runner", () -> null { {  } assert.is_true(true) }, testing.Quorum(5, 3)); registry.register_test_at("root", "constructor runner", () -> null { {  } assert.is_true(true) }, user.MyRunner { threshold: 0.5 }) } null
}
