baml_language/crates/baml_tests/snapshots/diagnostic_errors/test_with_runner_ambiguity/baml_tests__diagnostic_errors__test_with_runner_ambiguity__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 57581
---
=== PPIR ===
class user.MyRunner {
  threshold: float
}
class user.MyRunner$stream {
  threshold: float | null
}
function user.$init_test_main(registry: testing.TestCollector) -> ?  [expr] {
  { registry.register_test("simple runner", () -> void { {  } assert.is_true(true) }, my_runner); registry.register_test("call runner", () -> void { {  } assert.is_true(true) }, testing.Quorum(5, 3)); registry.register_test("constructor runner", () -> void { {  } assert.is_true(true) }, user.MyRunner { threshold: 0.5 }) } null
}
