baml_language/crates/baml_tests/snapshots/diagnostic_errors/test_with_runner_ambiguity/baml_tests__diagnostic_errors__test_with_runner_ambiguity__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.MyRunner {
  threshold: float
}
function user.$init_test_28(registry: testing.TestCollector) -> ? throws never {
  { : null
    registry.register_test("simple runner", () -> void { ... }, my_runner) : void
      () -> void { ... } : () -> void throws unknown
        {
          assert.is_true(true)
        }
    registry.register_test("call runner", () -> void { ... }, testing.Quorum(5, 3)) : void
      () -> void { ... } : () -> void throws unknown
        {
          assert.is_true(true)
        }
    registry.register_test("constructor runner", () -> void { ... }, MyRunner { threshold: 0.5 }) : void
      () -> void { ... } : () -> void throws unknown
        {
          assert.is_true(true)
        }
    null : null
  }
  !! 384..393: unresolved name: my_runner
  !! 512..527: unresolved name: Quorum
}
lambda user.$init_test_28 {
}
lambda user.$init_test_28 {
}
lambda user.$init_test_28 {
}
class user.MyRunner$stream {
  threshold: null | float
}
