baml_language/crates/baml_tests/snapshots/diagnostic_errors/test_with_runner_ambiguity/baml_tests__diagnostic_errors__test_with_runner_ambiguity__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: unresolved name: my_runner
   ╭─[ main.baml:8:31 ]
   │
 8 │ ╭─▶ test "simple runner" with my_runner {
 9 │ ├─▶   assert.is_true(true)
   │ │                            
   │ ╰──────────────────────────── unresolved name: my_runner
   │     
   │     Note: Error code: E0003
───╯

  [type] Error: unresolved name: Quorum
    ╭─[ main.baml:13:30 ]
    │
 13 │ test "call runner" with testing.Quorum(5, 3) {
    │                              ───────┬───────  
    │                                     ╰───────── unresolved name: Quorum
    │ 
    │ Note: Error code: E0003
────╯
