baml_language/crates/baml_tests/snapshots/diagnostic_errors/test_with_runner_ambiguity/baml_tests__diagnostic_errors__test_with_runner_ambiguity__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function $init_test() -> null {
    load_var ?1
    call ?
    pop 1
    load_const ?
    return
}

function user.$init_test_25(registry: testing.TestCollector) -> null {
    load_var registry
    load_const "simple runner"
    make_closure .<lambda($init_test_25, 0)>, 0
    load_const null
    call testing.TestCollector.register_test
    pop 1
    load_const 5
    load_const 3
    load_const null
    call_indirect
    store_var _6
    load_var registry
    load_const "call runner"
    make_closure .<lambda($init_test_25, 1)>, 0
    load_var _6
    call testing.TestCollector.register_test
    pop 1
    load_var registry
    load_const "constructor runner"
    make_closure .<lambda($init_test_25, 2)>, 0
    alloc_instance user.MyRunner
    load_const 0.5
    init_field .threshold
    call testing.TestCollector.register_test
    pop 1
    load_const null
    return
}
